--- a/Gardenguru/style.css
+++ b/Gardenguru/style.css
@@ -921,6 +921,7 @@ body::after {
   font-family: 'Public Sans', sans-serif;
   font-size: 15px;
   padding-bottom: 10px;
+  text-align: center;
 }
 .descriptionTitle{
   font-family: 'Public Sans', sans-serif;
@@ -1254,4 +1255,106 @@ a{
   .UserCard img {
     width: 130px;
   }
+}
+
+/*tools*/
+.toolsMainContainer{
+  padding-top:68px;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.toolsTitle{
+  text-align: center;
+  font-size: 35px;
+  color: rgb(26, 25, 25);
+  padding: 20px;
+}
+.toolsImgMain{
+  display: grid;
+  justify-content: center;
+  margin:20px 0px;
+}
+.toolContainer{
+  display:grid;
+  grid-template-columns: 1fr 2fr;
+  border-bottom: 2px solid #cdcbcb3d;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.titleTool{
+  font-size: 25px;
+  color: rgb(26, 25, 25);
+  padding-bottom: 10px;
+}
+.listSquare > li{
+  list-style-type: square;
+  font-size: 17px;
+  color:#2e2c2c;
+}
+.textItem{
+  display: grid;
+  align-items: center;
+}
+.toolsSubtitle{
+  color: #5aa53f;
+  font-family: 'Public Sans', sans-serif;
+  font-size: 19px;
+  text-align: center;
+}
+
+/*water*/
+.basicsSplit{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  padding:20px;
+}
+.basicsItem{
+  background-image: url(images/backgroundImage2.jpg);
+  padding: 15px;
+}
+.imgMainRadius{
+  border-radius: 10px;
+}
+.infoSubject{
+  text-align: justify;
+  color: #2e2c2c;
+}
+.pinfoMain{
+  padding: 7px 0px;
+  text-align: justify;
+  color: #2e2c2c;
+}
+.toolsSubtitleTitle{
+  text-align: center;
+  font-size: 30px;
+  color: rgb(26, 25, 25);
+  padding: 20px;
+}
+.boldSubtitle{
+  text-align: center;
+  font-size: 22px;
+  color: rgb(42 44 42);
+  padding: 40px 0px;
+}
+.rolesContainer{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+  padding-bottom: 30px;
+  border: 3px solid #cdcbcb3d;
+  margin-bottom: 30px;
+}
+.rolesItem{
+  padding: 20px;
+}
+.rolesTitle{
+  text-align: center;
+  font-size: 22px;
+  color: rgb(26, 25, 25);
+  padding: 15px;
+}
+.margin30{
+  margin-bottom: 30px;
 }
