--- a/Gardenguru/style.css
+++ b/Gardenguru/style.css
@@ -1100,13 +1100,23 @@ a {
 
   grid-template-columns: repeat(4, 1fr);
 
-  gap: 20px;
+  gap: 40px;
   padding: 10px;
   padding-top: 76px;
   box-sizing: border-box;
 }
 
+.MP_container{
+  background-image: url(images/backgroundImage2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 0 0 0 0 #ffffff;
+    padding: 70px;
+    border-bottom: 5px solid #cdcbcb3d;
+}
+
 .MP_container>.div_cell {
+  background-color: #ffffff;
   border: 2px solid;
   border-color: #d8cba2;
   padding: 20px;
@@ -1232,7 +1242,14 @@ a {
   padding-top: 76px;
   box-sizing: border-box;
 }
-
+.Top_container{
+background-image: url(images/backgroundImage2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: 0 0 0 0 #ffffff;
+    padding: 70px;
+    border-bottom: 5px solid #cdcbcb3d;
+}
 
 .Top_selectMenu {
 
@@ -1245,6 +1262,7 @@ a {
 
 
 .Top_selectMenu>.div_cell {
+  background-color: #ffffff;
   width: 500px;
   border: 2px solid;
   border-color: #d8cba2;
@@ -1327,6 +1345,7 @@ a {
 }
 
 .Top_display>.div_cell {
+  background-color: #ffffff;
   width: 500px;
   border: 2px solid;
   border-color: #d8cba2;
